--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <ul class="top-icons">
       <li>
         <img src="assets/home.svg" alt="Dashboard" routerLink="/home" />
-        <span routerLink="/users">Usuarios</span>
+        <span routerLink="/customers">Usuarios</span>
       </li>
       <li>
         <img src="assets/stats.svg" alt="Stats" />
