frontend casi terminado

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,20 +1,20 @@
 <aside [class.expanded]="isExpanded">
   <div class="sidebar-toggle" (click)="toggleSidebar()">
-    <img src="assets/codex_menu.svg" alt="Toggle" />
+    <img src="assets/menu.svg" alt="Toggle" />
   </div>
   <nav>
     <ul class="top-icons">
       <li>
-        <img src="assets/home.svg" alt="Dashboard" routerLink="/home" />
+        <img src="assets/users.svg" alt="Dashboard" routerLink="/home" />
         <span routerLink="/customers">Usuarios</span>
       </li>
       <li>
-        <img src="assets/stats.svg" alt="Stats" />
+        <img src="assets/cars.svg" alt="Stats" />
         <span routerLink="/cars">Carros</span>
       </li>
       <li>
         <img
-          src="assets/notification.svg"
+          src="assets/money.svg"
           alt="Notifications"
           routerLink="/notifications"
         />
