--- a/src/app/ui/admin/table-rents/table-rents.component.html
+++ b/src/app/ui/admin/table-rents/table-rents.component.html
@@ -4,9 +4,9 @@
   <table class="styled-table">
     <thead>
       <tr>
-        <th scope="col" class="first-header">Usuario</th>
-        <th scope="col" class="a">Carro</th>
-        <th scope="col" class="last-header">Detalles</th>
+        <th scope="col" class="first-header">Carro</th>
+        <th scope="col" class="a">Cliente</th>
+        <th scope="col" class="last-header">Fecha de entrega</th>
       </tr>
     </thead>
     <tbody>
