--- a/src/app/ui/admin/table-cars/table-cars.component.css
+++ b/src/app/ui/admin/table-cars/table-cars.component.css
@@ -1,6 +1,7 @@
 .table-container {
   max-width: 150vh;
   margin: 20px auto;
+  margin-top: 10vh;
   overflow-x: auto;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -10,7 +11,7 @@
 
 .styled-table {
   width: 100%;
-
+  border-collapse: separate;
   border-spacing: 0;
   font-size: 14px;
 }
@@ -55,9 +56,4 @@
 .styled-table tbody tr:hover {
   background-color: #f1f5f9;
   cursor: pointer;
-}
-
-.header-title{
-  text-align: center;
-  margin-left: 10vh;
 }
